# swiper

./: .gitignore  CLAUDE.md  capacitor.config.json  index.html  package-lock.json  package.json  style.css
.claude/: launch.json
.github/workflows/: build.yml
core/: gameManager.js  widgetShell.js
games/aquarium/: index.js
games/aurora/: index.js
games/campfire/: index.js
games/clouds/: index.js
games/fireflies/: index.js
games/generator/: index.js
games/holoPaper/: index.js
games/ink/: index.js
games/lavaLamp/: index.js
games/metronome/: index.js
games/newtonCradle/: index.js
games/pendulum/: index.js
games/sand/: index.js
games/snake/: index.js
games/snowGlobe/: index.js
games/tetris/: index.js
src/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: audio.js  gameManager.js  widgetShell.js
src/games/aquarium/: index.js
src/games/aurora/: index.js
src/games/bubbles/: index.js
src/games/campfire/: index.js
src/games/clouds/: index.js
src/games/fireflies/: index.js
src/games/generator/: index.js
src/games/ink/: index.js
src/games/lavaLamp/: index.js
src/games/leaves/: index.js
src/games/metronome/: index.js
src/games/newtonCradle/: index.js
src/games/sand/: index.js
src/games/snake/: index.js
src/games/snowGlobe/: index.js
src/games/waterRipple/: index.js
src/games/zenGarden/: index.js
