[package]
name = "zen-widget"
version = "0.1.0"
description = "ZenWidget — relaxing mini-games floating widget"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "macos-private-api", "window-close", "window-set-size", "window-hide", "window-start-dragging", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
